--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,8 +84,8 @@
     <footer class="footer d-flex flex-column justify-content-center mt-3">
         <div class="container">
             <div class="about-me text-center">
-                Рубанова Лиза 211-331 <br>
-                Московский Политех
+                Rubanova Lisa 211-331 <br>
+                Moskovskiy Politeh
             </div>
         </div>
     </footer>
